tests/e2e/service_call_as_output2b.error
Error: syntax error in story at line 1, column 20

1|    (uuid generate) to t
                         ^

E0041: `t` is not allowed here
